# WiingPong

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  WiingPong.dol  WiingPong.elf  meta_template.xml
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml  discussions_setup.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/actions/setup-devkitpro/: README.md  action.yml
.github/workflows/: build-and-release.yml  ci.yml  maintenance.yml  pr-validation.yml  release.yml  wii-build.yml
apps/WiingPong/: boot.dol  meta.xml
apps/WiingPong/data/sounds/: paddle_hit.pcm  score.pcm  wall_hit.pcm
configs/: config_debug_quick.h  config_release.h
data/sounds/: intro.pcm
data/sounds/wiimote/: player_loss.pcm  player_paddle_hit.pcm  player_score.pcm
docs/: architecture.md  audio_integration.md  button_controls_implementation.md  ci_dependencies.md  ci_improvements.md  configuration_system.md  debug_buttons_update.md  debug_toggle_feature.md  debug_window_guide.md  manual_release_guide.md  project_status.md  sensor_debug_implementation.md  sensor_implementation_summary.md  sound_effects_tv_update.md  wiimote_audio_implementation.md  wpad_probe_fix.md
include/: WiimoteManager.h  config.h  wpad_wrapper.h
include/assets/: AssetManager.h
include/audio/: AudioManager.h
include/gamestate/: GameStateManager.h
include/input/: InputManager.h
include/physics/: Components.h  PhysicsEngine.h
include/rendering/: Renderer.h
source/: WiimoteManager.cpp  main.cpp  wpad_mock.cpp
source/assets/: AssetManager.cpp
source/audio/: AudioManager.cpp  CMakeLists.txt
source/gamestate/: CMakeLists.txt  GameStateManager.cpp
source/input/: CMakeLists.txt  InputManager.cpp
source/physics/: CMakeLists.txt  PhysicsEngine.cpp
source/rendering/: CMakeLists.txt  Renderer.cpp
tests/unit/: test_physics.cpp
